# LRS_University

./: LR_1.c  README.md  lr1_tests.c  plib.c  plib.h  untitled.c  ~$ЛР-2.docx
LR1/: a.out  lr1_tests.c  plib.c  plib.h
LR1/include/: functions.h
LR1/src/: functions.c
LR1_bad/: lr1_tests.c  plib.c  plib.h
LR1_void/: a.out  double.c  double.h  functions.c  headers.h  int.c  int.h  main.c  polynomial.h
LR1_void/include/: double.h  exceptions.h  headers.h  polynomial.h
LR1_void/src/: double.c  exceptions.c  functions.c  int.c
LR2/: templates.cpp
LR2/src/: dynamicarray.cpp  dynamicarray_sequence.h  linkedlist.h  linkedlist_sequence.cpp  linkedlist_sequence.h
LR2/tests/: dynamicarray_test.cpp  linkedlist_test.cpp  linkedlist_test.h  sequence_test.h
LW1/include/: int.h
LW1/src/: double.c  int.c
LW2/: CMakeLists.txt  README.md  main.cpp  templates.cpp
LW2/src/: complex.cpp  complex.h  dynamicarray.cpp  dynamicarray.h  dynamicarray_sequence.cpp  dynamicarray_sequence.h  linkedlist.cpp  linkedlist_sequence.cpp  linkedlist_sequence.h  matrix.cpp  matrix.h  sequence.cpp  sequence.h  vector.cpp  vector.h
LW2/tests/: dynamicarray_test.cpp  dynamicarray_test.h  matrix_test.cpp  matrix_test.h  sequence_test.cpp  vector_test.cpp  vector_test.h  vector_time_test.cpp  vector_time_test.h
LW2/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
LW3/: CMakeList.txt  README.md
LW3/example_input_data/: tree_1.tree
LW3/src/: complex.cpp  (+5 more)
TESTS/: test.c  test_classes_1.cpp  test_classes_2.cpp  test_classes_3.cpp  test_operator.cpp
cpp_c_tests/: test_classes.cpp
